--- a/index.html
+++ b/index.html
@@ -2,32 +2,34 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-      <title>Virtual Pet-1</title>
+      <title>Virtual Pet-2</title>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
       <script src="p5.play.js"></script>
+      <script src="Food.js"></script>
 
       
       <!--Your web app's Firebase configuration
          Add here
         Initialize Firebase-->
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
+       <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-database.js"></script>
+
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyBY6jhr-1N2tRAV_RpeSchTRezkdBABIQk",
-    authDomain: "virtual-pet-d24c2.firebaseapp.com",
-    databaseURL: "https://virtual-pet-d24c2.firebaseio.com",
-    projectId: "virtual-pet-d24c2",
-    storageBucket: "virtual-pet-d24c2.appspot.com",
-    messagingSenderId: "1024551740714",
-    appId: "1:1024551740714:web:cda4bf11509b16425fea53"
+    apiKey: "AIzaSyA5vr-kxJ29cANh0nuL393ePVUDX99SRRU",
+    authDomain: "virtual-pet-2-58bdc.firebaseapp.com",
+    databaseURL: "https://virtual-pet-2-58bdc.firebaseio.com",
+    projectId: "virtual-pet-2-58bdc",
+    storageBucket: "virtual-pet-2-58bdc.appspot.com",
+    messagingSenderId: "616713552987",
+    appId: "1:616713552987:web:69d8457d137471db792b7e"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
