--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-      <title>Virtual Pet-2</title>
+      <title>Virtual Pet-3</title>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
@@ -23,13 +23,13 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyA5vr-kxJ29cANh0nuL393ePVUDX99SRRU",
-    authDomain: "virtual-pet-2-58bdc.firebaseapp.com",
-    databaseURL: "https://virtual-pet-2-58bdc.firebaseio.com",
-    projectId: "virtual-pet-2-58bdc",
-    storageBucket: "virtual-pet-2-58bdc.appspot.com",
-    messagingSenderId: "616713552987",
-    appId: "1:616713552987:web:69d8457d137471db792b7e"
+    apiKey: "AIzaSyBxlZB7QN-cSZzHMfKv3iNfHYeYSFKIOCc",
+    authDomain: "virtual-pet-3-28507.firebaseapp.com",
+    databaseURL: "https://virtual-pet-3-28507.firebaseio.com",
+    projectId: "virtual-pet-3-28507",
+    storageBucket: "virtual-pet-3-28507.appspot.com",
+    messagingSenderId: "987545595676",
+    appId: "1:987545595676:web:fa2c4965f1cca78ee6d4d9"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
